update samples web server

--- a/web-server/nginx-sample/nginx.conf
+++ b/web-server/nginx-sample/nginx.conf
@@ -17,8 +17,8 @@ http {
   port_in_redirect off; # Ensure that redirects don't include the internal container PORT - 8080
 
   server {
-    listen {{port}};
-    root public;
+    listen 8888;
+    root /workspace;
     index index.html index.htm Default.htm;
   }
 }
